--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://cdn.pixabay.com/photo/2019/07/30/05/53/dog-4372036__480.jpg" 
+	alt="Dog">
     <script type="text/javascript" src="./script.js">
 </script>
 
